--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.flow-noise-1.0.1-SNAPSHOT.jar=E:\\Documents\\Code\\Netbeans Projects\\MapGen\\noise-develop\\target\\flow-noise-1.0.1-SNAPSHOT.jar
+file.reference.flow-noise-1.0.1-SNAPSHOT.jar-1=C:\\Users\\Alan\\Downloads\\noise-develop\\noise-develop\\target\\flow-noise-1.0.1-SNAPSHOT.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.flow-noise-1.0.1-SNAPSHOT.jar}
+    ${file.reference.flow-noise-1.0.1-SNAPSHOT.jar}:\
+    ${file.reference.flow-noise-1.0.1-SNAPSHOT.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
