-Started multithreaded generation support

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,8 +34,8 @@ file.reference.flow-noise-1.0.1-SNAPSHOT.jar-1=C:\\Users\\Alan\\Downloads\\noise
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.flow-noise-1.0.1-SNAPSHOT.jar}:\
-    ${file.reference.flow-noise-1.0.1-SNAPSHOT.jar-1}
+    ${file.reference.flow-noise-1.0.1-SNAPSHOT.jar-1}:\
+    ${file.reference.flow-noise-1.0.1-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
